# mycelial-core

./: Cargo.toml  README.md
mycelial-crdt/: .gitignore  Cargo.toml  README.md
mycelial-crdt/benches/: append_only_list.rs  list.rs
mycelial-crdt/src/: lib.rs  list.rs  vclock.rs
mycelial-crdt/tests/: list.rs  vclock.rs
mycelial-wasm/: Cargo.toml  Makefile
