[package]
name = "mycelial-crdt"
version = "0.2.5"
edition = "2021"
description = "mycelial crdt"
license = "Apache-2.0"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html
[lib]
name = "mycelial_crdt"
path = "src/lib.rs"

[[bench]]
name = "list"
harness = false

[[bench]]
name = "append_only_list"
harness = false

[dependencies]
num = {version = "0.4", features=["serde"] }
serde = { version = "1", features=["derive"] }

[dev-dependencies]
quickcheck = "1.0.3"
criterion = "0.3"
rand = {version = "0.8", features = ["small_rng"]}
