[package]
name = "mycelial-wasm"
version = "0.1.0"
edition = "2021"
description = "wasm wrapper for mycelial crdt"
license = "Apache-2.0"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html
[lib]
path="src/lib.rs"
crate-type=["cdylib"]

[dependencies]
mycelial-crdt = "0.1.0"
wasm-bindgen = "0.2"
js-sys = "0.3"
serde_json = "1"
